# fluid-representations

./: .gitignore  README.md  active_matter_test.sbatch  active_matter_tjepa.sbatch  pyproject.toml  sweep_agent.sbatch  test.py  train.py
configs/: sweep_tjepa_active_matter.yaml  tjepa_active_matter.yaml
doc/: 01_vjepa_masked_block_plan.md  02_temporal_ar_jepa_plan.md
physics_ssl/: __init__.py  callbacks.py  data.py  encoder.py  forward.py  model.py  transforms.py
scripts/: launch_sweep.sh  singularity_run.sh
tests/: conftest.py  test_data.py  test_forward.py  test_model.py  test_transforms.py
