[project]
name = "stable-pretraining-physics"
version = "0.1.0"
description = "Temporal-AR JEPA on physics video data, on top of stable-pretraining"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "lightning>=2.0",
  "stable-pretraining",
  "transformers",
  "torchmetrics",
  "einops",
  "h5py",
  "numpy",
  "hydra-core",
  "omegaconf",
  "loguru",
]

[tool.setuptools.packages.find]
include = ["physics_ssl*"]
